--- a/world/rocm-hip-sdk/.artixlinux/pkgbase.yaml
+++ b/world/rocm-hip-sdk/.artixlinux/pkgbase.yaml
@@ -1,67 +1,66 @@
 ---
 team: world
-pkgbase:
-  name: rocm-hip-sdk
-  version: 6.3.3-1
-  arch:
-    - any
-  pkgname:
-    - rocm-hip-sdk
-    - rocm-hip-libraries
-    - rocm-opencl-sdk
-    - rocm-hip-runtime
-    - rocm-language-runtime
-    - rocm-ml-sdk
-    - rocm-ml-libraries
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.3.3-1
+    version: 6.4.0-1
     packages:
-      - rocm-hip-sdk-6.3.3-1-any.pkg.tar.zst
-      - rocm-hip-libraries-6.3.3-1-any.pkg.tar.zst
-      - rocm-opencl-sdk-6.3.3-1-any.pkg.tar.zst
-      - rocm-hip-runtime-6.3.3-1-any.pkg.tar.zst
-      - rocm-language-runtime-6.3.3-1-any.pkg.tar.zst
-      - rocm-ml-sdk-6.3.3-1-any.pkg.tar.zst
-      - rocm-ml-libraries-6.3.3-1-any.pkg.tar.zst
+      - rocm-hip-sdk-6.4.0-1-any.pkg.tar.zst
+      - rocm-hip-libraries-6.4.0-1-any.pkg.tar.zst
+      - rocm-opencl-sdk-6.4.0-1-any.pkg.tar.zst
+      - rocm-hip-runtime-6.4.0-1-any.pkg.tar.zst
+      - rocm-language-runtime-6.4.0-1-any.pkg.tar.zst
+      - rocm-ml-sdk-6.4.0-1-any.pkg.tar.zst
+      - rocm-ml-libraries-6.4.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
