--- a/galaxy/zathura-pdf-mupdf/.artixlinux/pkgbase.yaml
+++ b/galaxy/zathura-pdf-mupdf/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: zathura-pdf-mupdf
-  version: 0.4.4-14
-  arch:
-    - x86_64
-  pkgname:
-    - zathura-pdf-mupdf
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.4.4-14
+    version: 0.4.4-16
     packages:
-      - zathura-pdf-mupdf-0.4.4-14-x86_64.pkg.tar.zst
+      - zathura-pdf-mupdf-0.4.4-16-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
