--- a/world/ansible-core/PKGBUILD
+++ b/world/ansible-core/PKGBUILD
@@ -9,7 +9,7 @@
 
 pkgname=ansible-core
 _pkgname=ansible
-pkgver=2.18.5
+pkgver=2.18.6
 pkgrel=1
 pkgdesc='Radically simple IT automation platform'
 arch=('any')
@@ -61,14 +61,11 @@ optdepends=(
 provides=('python-ansible' 'ansible-base')
 replaces=('ansible-base')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/ansible/ansible/archive/refs/tags/v${pkgver}.tar.gz"
-        'bump_resolvelib_upper_version_bound.patch'
-        'relax_setuptools_version_requirements.patch')
-sha512sums=('8358f9fe1bfe31ecc77c78c4d3f7248ea7e0ad52d0376f1769211bb0977bd0994065ff69aae61a5ba8173d517bd13f4438d5129caa6d2eba730f84bdc6342c50'
-            '420d03e64a189043c7fbaa6a5799eed04ea28c4c2729197b4a51467ec672ab73325f6ea46d02a0ad84bc89aa1a8ffc4d23c716003215029eb60fc68577154e5c'
-            'e05f37ff80852f48dd0414d3c8efb62bd9456e7f25c200f687449e3e2a85462478789240ebf94626b252b30cd75b67ef65b9cec2cf3591d58fa3442f5cc508b5')
-b2sums=('d99ca4033fa1771c7448332f9bd55104464a57048fd43cde5f598ef0095d9d81638822957fce42739db8eb370c1498ee366e1c0094a0cede6c1fde4c9eb40943'
-        'f2885491361673f067716b0d130a9043843715513f55bcb6fefc86159169056b567922f642816a2cfbbb7b6d31efc94c1f204f72865dc33881cf13886aa3967b'
-        '3415873d55e7a2f01a3ea0eaf9224c5e2d5d6de5bd0e9f6b0799cd07d46022ff23352ffac9237045340538beaa50fb0c12f297054387b2487265a4c9dbb99248')
+        'bump_resolvelib_upper_version_bound.patch')
+sha512sums=('1b23cd170ecaf79ce0b7e5260e743912d1a9e7a6ab185527dd65dcb16a2788add2054c8b6ec1a6197190c9910f81d6287493ae17860898de9a70251dff1a77a0'
+            '420d03e64a189043c7fbaa6a5799eed04ea28c4c2729197b4a51467ec672ab73325f6ea46d02a0ad84bc89aa1a8ffc4d23c716003215029eb60fc68577154e5c')
+b2sums=('72bd27b2d30522657cbe175772831697a9c3859fe8b941038584e0d52f8da2d769998ece2b186554903f55ed175b11d89d89bb6d6c388936a3c30530427584d5'
+        'f2885491361673f067716b0d130a9043843715513f55bcb6fefc86159169056b567922f642816a2cfbbb7b6d31efc94c1f204f72865dc33881cf13886aa3967b')
 
 prepare() {
   cd "${_pkgname}-${pkgver}"
@@ -76,16 +73,11 @@ prepare() {
   # Temporary patch to allow build / checks to pass with resolvelib 1.1.0
   # For now, upstream has set the upper version bound for it at `< 1.1.0`
   # See https://github.com/ansible/ansible/blob/devel/requirements.txt#L10-L15
-  # And https://github.com/ansible/ansible/blob/devel/lib/ansible/galaxy/dependency_resolution/providers.py#L40-L43
+  # and https://github.com/ansible/ansible/blob/devel/lib/ansible/galaxy/dependency_resolution/providers.py#L40-L43
   #
-  # EDIT: resolvelib version requirement has been bumped but not yet tagged
+  # EDIT: resolvelib version requirement has been bumped but the related commit is not part of any stable releases yet
   # See https://github.com/ansible/ansible/commit/771f7ad29ca4d259761eaa88673c2e32f6412bbe
   patch -Np1 < "${srcdir}/bump_resolvelib_upper_version_bound.patch"
-
-  # Temporary patch to allow building with latest setuptools
-  # Currently, upstream has set the upper version version bound for it at `< 72.1.0`
-  # See https://github.com/ansible/ansible/blob/devel/pyproject.toml#L2
-  patch -Np1 < "${srcdir}/relax_setuptools_version_requirements.patch"
 }
 
 build() {
