--- a/world/mupdf/.artixlinux/pkgbase.yaml
+++ b/world/mupdf/.artixlinux/pkgbase.yaml
@@ -1,15 +1,4 @@
 ---
-pkgbase:
-  name: mupdf
-  version: 1.25.6-1
-  arch:
-    - x86_64
-  pkgname:
-    - libmupdf
-    - mupdf
-    - mupdf-gl
-    - mupdf-tools
-    - python-mupdf
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -22,42 +11,54 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.25.6-1
+    version: 1.26.1-1
     packages:
-      - libmupdf-1.25.6-1-x86_64.pkg.tar.zst
-      - mupdf-1.25.6-1-x86_64.pkg.tar.zst
-      - mupdf-gl-1.25.6-1-x86_64.pkg.tar.zst
-      - mupdf-tools-1.25.6-1-x86_64.pkg.tar.zst
-      - python-mupdf-1.25.6-1-x86_64.pkg.tar.zst
+      - libmupdf-1.26.1-1-x86_64.pkg.tar.zst
+      - mupdf-1.26.1-1-x86_64.pkg.tar.zst
+      - mupdf-gl-1.26.1-1-x86_64.pkg.tar.zst
+      - mupdf-tools-1.26.1-1-x86_64.pkg.tar.zst
+      - python-mupdf-1.26.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
