--- a/galaxy/fastfetch/.artixlinux/pkgbase.yaml
+++ b/galaxy/fastfetch/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: fastfetch
-  version: 2.43.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - fastfetch
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 2.43.0-1
+    version: 2.44.0-1
     packages:
-      - fastfetch-2.43.0-1-x86_64.pkg.tar.zst
+      - fastfetch-2.44.0-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
