--- a/world/qt5-base/.artixlinux/pkgbase.yaml
+++ b/world/qt5-base/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: qt5-base
-  version: 5.15.16+kde+r131-1
-  arch:
-    - x86_64
-  pkgname:
-    - qt5-base
-    - qt5-xcb-private-headers
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.15.16+kde+r131-1
+    version: 5.15.17+kde+r122-1
     packages:
-      - qt5-base-5.15.16+kde+r131-1-x86_64.pkg.tar.zst
-      - qt5-xcb-private-headers-5.15.16+kde+r131-1-x86_64.pkg.tar.zst
+      - qt5-base-5.15.17+kde+r122-1-x86_64.pkg.tar.zst
+      - qt5-xcb-private-headers-5.15.17+kde+r122-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
