--- a/world/qt5-doc/.artixlinux/pkgbase.yaml
+++ b/world/qt5-doc/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: qt5-doc
-  version: 5.15.16-3
-  arch:
-    - any
-  pkgname:
-    - qt5-doc
-    - qt5-examples
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.15.16-3
+    version: 5.15.17-1
     packages:
-      - qt5-doc-5.15.16-3-any.pkg.tar.zst
-      - qt5-examples-5.15.16-3-any.pkg.tar.zst
+      - qt5-doc-5.15.17-1-any.pkg.tar.zst
+      - qt5-examples-5.15.17-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
