--- a/world/qt5-remoteobjects/.artixlinux/pkgbase.yaml
+++ b/world/qt5-remoteobjects/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: qt5-remoteobjects
-  version: 5.15.16-3
-  arch:
-    - x86_64
-  pkgname:
-    - qt5-remoteobjects
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 5.15.16-3
+    version: 5.15.17-1
     packages:
-      - qt5-remoteobjects-5.15.16-3-x86_64.pkg.tar.zst
+      - qt5-remoteobjects-5.15.17-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
