--- a/system/linux-lts/PKGBUILD
+++ b/system/linux-lts/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgbase=linux-lts
-pkgver=6.12.27
+pkgver=6.12.30
 pkgrel=1
 pkgdesc='LTS Linux'
 url='https://www.kernel.org'
@@ -36,24 +36,27 @@ source=(
   0002-Default-to-maximum-amount-of-ASLR-bits.patch
   0003-skip-simpledrm-if-nvidia-drm.modeset\=1-is.patch
   config  # the main kernel config file
+  0001-loop-don-t-require-write_iter-for-writable-files-in-loop_configure.patch
 )
 validpgpkeys=(
   ABAF11C65A2970B130ABE3C479BE3E4300411886  # Linus Torvalds
   647F28654894E3BD457199BE38DBBDC86092693E  # Greg Kroah-Hartman
 )
 # https://www.kernel.org/pub/linux/kernel/v6.x/sha256sums.asc
-sha256sums=('8f4655a4cc7f93d72f515bbca54756de26ddaf5949790da6a17f766e3c33dc79'
+sha256sums=('df046a48971e40ce0b2e003e7e55b6b1e7da2912120eb216d5d6c8450c9cf82e'
             'SKIP'
             '3cf389ced2b40e6457421cb27892bf126b73032fbf1de895ecc37b13d981a17c'
             '423b2c6fbc8d6df79997550bef1b1e4f6f402b668007d150013623a83a12b49e'
             '596f8e0aef1df72a84685e8f2b8a9dde7e33b513de555fae6069ba652cbd00c1'
-            'c63a084009865301365dc5f3ba2ac76038f70339fb6beb8e8bb2189277284f4f')
-b2sums=('70722808d57cd096e813c52bbf805119f81273fc977af8943658935c25c3cacdc96b83355b8bdf8291b60b6e8f4cc81dfb41ddb13e74686ec8340d8006fb5dc7'
+            'da0494ea82ced0c5c87069218855953215b0de99af03f0df187d06cdb086a67e'
+            '8b15224f39036ef6f9d418d62ad5e7db4639496c597564c1ca7be6faed6e237f')
+b2sums=('33f06b0cf1d1872442139bf8ebd0e6b782034bb9dd4cb897388eed2283a79019ab1d37362648afc3816dcec20922898b44ba5b344210bf4964569149a54bca1e'
         'SKIP'
         'b2e1f3544470a0ded336a8d9097b879060530d795a9b60ef5d617d16c165f3ca27424529a7c464d249ab72abcaf48d65d66d96508a7b49622ab404739ae0a918'
         '01f1a8249983b1a52437843ce3566242b3ed1df03fcab98ec092982be9a4dc947ab0f932a6bc9ac84f85248dca479ebe193a6032cfd2b574dc6f5ca31a0190c5'
         '410dc8911051905c5c01b47890eeff817fc180434372864cfa9ee0d77e0ff43571b9fcc3c193d562c4dcd49511edf7c6c01dde12dd0778845d1868dc435531ea'
-        '0fe475c820c7469da08c24bfac99a88617d8cacd78b548e51b13e5e3d1ffc95c92e3ea90664ab34509ec22824cbc83e4da3071f230e29c220a7793e9f1093818')
+        'e5e907823919cc602c693a53166c3b06fc9d2a7fe84ec7cda82c71cf09b9422133e46ae1fbd644299924da829ff54851c0cfc7257ac4b4715ff236f2b5752ff9'
+        'd2e3cf50febe9f61fb52716529e0796533a2a5fe517393c020b4be9a46d0911c06aa68f74e570075cb17254120d9bcfaaf9cbf7836b88eb21a9f4d71d95ea5a5')
 export KBUILD_BUILD_HOST=artixlinux
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
