--- a/world/dpkg/.artixlinux/pkgbase.yaml
+++ b/world/dpkg/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: dpkg
-  version: 1.22.18-1
-  arch:
-    - x86_64
-  pkgname:
-    - dpkg
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.22.18-1
+    version: 1.22.19-1
     packages:
-      - dpkg-1.22.18-1-x86_64.pkg.tar.zst
+      - dpkg-1.22.19-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
